==> pglr/SimpleCanLib/src/drivers/hardware_specific/esp32/ESP32_SimpleCAN.cpp <==
#include <Arduino.h>
	#include "Logging.h"
	#define PrintLnLog  Serial.println
	#define PrintLog    Serial.printf
#include "freertos/FreeRTOS.h"
#include "freertos/queue.h"
#include "../../../common/ThreadSafeQueue.h"
#include "esp_intr_alloc.h"
#include "soc/dport_reg.h"
#include <math.h>
#include "driver/gpio.h"
#include "ESP32_CAN_regdef.h"
#include "../../../SimpleCAN.h"

bool RxHandlerESP32::CANReadFrame(SimpleCanRxHeader* SCHeader, uint8_t* pData, int MaxDataLen)
{
	// Frame read buffer
	CAN_frame_t __frame;

    //check if we have a queue. If not, operation is aborted.
    if (ProfileCallback == NULL)
	{
        return false;
    }

	// Get Frame info record
	__frame.FIR.U=MODULE_CAN->MBX_CTRL.FCTRL.FIR.U;

	SCHeader->RxTimestamp = -1;			// Unusupported...
	SCHeader->FilterIndex = -1;
	SCHeader->IsFilterMatchingFrame = -1;
	SCHeader->RxFrameType = __frame.FIR.B.RTR==CAN_RTR ? SCFrameType::CAN_REMOTE_FRAME : SCFrameType::CAN_DATA_FRAME;
	SCHeader->DataLength = __frame.FIR.B.DLC;
	SCHeader->Format = SCCanType::CAN_CLASSIC;

    // Check if this is a standard or extended CAN frame
    if(__frame.FIR.B.FF==CAN_frame_std)
	{
 	   	// Standard frame
        //Get Message ID and header info
        SCHeader->Identifier = _CAN_GET_STD_ID;
		SCHeader->IdType = SCIdType::CAN_STDID;

		// if (SCHeader->RxFrameType!=SCFrameType::CAN_DATA_FRAME)
		//	Serial.print(" RTR ");

        // Deep copy data bytes
        if (SCHeader->RxFrameType==SCFrameType::CAN_DATA_FRAME)
			for(int i=0; i<SCHeader->DataLength && i<MaxDataLen; i++)
				pData[i]=MODULE_CAN->MBX_CTRL.FCTRL.TX_RX.STD.data[i];
    }
    else
	{
		// Extended frame
        // Get Message ID and header info
        SCHeader->Identifier = _CAN_GET_EXT_ID;
		SCHeader->IdType = SCIdType::CAN_EXTID;

        //Deep copy data bytes
        if (SCHeader->RxFrameType==SCFrameType::CAN_DATA_FRAME)
			for(int i=0; i<SCHeader->DataLength && i<MaxDataLen; i++)
				pData[i]=MODULE_CAN->MBX_CTRL.FCTRL.TX_RX.EXT.data[i];
    }

	// PrintLnLog("CRF end"); delay(50);
	return true;
}

SCCanStatus SimpleCan_ESP32_DevC::Start(void)
{
    //Showtime. Release Reset Mode.
	PrintLnLog("CAN (ESP32): Start");
    // MODULE_CAN->MOD.B.RM = 0;
	HAL_FORCE_MODIFY_U32_REG_FIELD(MODULE_CAN->MOD, B.RM, 0);
	return CAN_OK;
}

SCCanStatus SimpleCan_ESP32_DevC::Stop(void)
{
	//enter reset mode
	// MODULE_CAN->MOD.B.RM = 1;
	HAL_FORCE_MODIFY_U32_REG_FIELD(MODULE_CAN->MOD, B.RM, 1);

	return CAN_OK;
}

SCCanStatus SimpleCan_ESP32_DevC::ConfigFilter(FilterDefinition *SCFilter)
{

	// For ESP32: Mask bit==1 ignores the bit. Acceptance code spans ID,RTR and first two data bytes (std frame).
	// For SimpleCAN: Mask bit==1 requires the bit to match.  Acceptance code spans ID only.

	if (SCFilter->FilterIndex>0) return CAN_UNSUPPORTED;

	if (SCFilter->IdType==CAN_STDID && SCFilter->FilterType==CAN_FILTER_MASK)
	{
		PrintLnLog("CAN: setting filter single ID & mask, Std Frame");
		uint32_t Code = SCFilter->FilterID1; 
		uint32_t Mask = ~SCFilter->FilterID2;		// Lowest 4 bits unused, 5th would be RTR 
		MODULE_CAN->MBX_CTRL.ACC.CODE[0] = Code >> 3; 
		MODULE_CAN->MBX_CTRL.ACC.CODE[1] = (Code<<5) & 0xff; 

		MODULE_CAN->MBX_CTRL.ACC.MASK[0] = Mask >> 3; 
		MODULE_CAN->MBX_CTRL.ACC.MASK[1] = Mask<<5 | 0x1f; 
		MODULE_CAN->MBX_CTRL.ACC.MASK[2] = 0xff; 
		MODULE_CAN->MBX_CTRL.ACC.MASK[3] = 0xff; 
		MODULE_CAN->MOD.B.AFM = 1;
	}
	else if (SCFilter->IdType==CAN_STDID && SCFilter->FilterType==CAN_FILTER_DUAL)
	{
		PrintLnLog("CAN: Unsupported filter mode");
		// Same as single, but with CODE/MASK[2/3] in addition.
		// ACR3 / AMR3 is shared between the two filters.
	    return CAN_UNSUPPORTED;
	}
	else if (SCFilter->IdType==CAN_EXTID && SCFilter->FilterType==CAN_FILTER_MASK)
	{
		PrintLnLog("CAN: setting filter single ID & mask, Ext Frame");
		uint32_t Code = SCFilter->FilterID1; 
		uint32_t Mask = ~SCFilter->FilterID2;		
		MODULE_CAN->MBX_CTRL.ACC.CODE[0] = Code >> 21; 
		MODULE_CAN->MBX_CTRL.ACC.CODE[1] = (Code>>13) & 0xff; 
		MODULE_CAN->MBX_CTRL.ACC.CODE[2] = (Code>>5)  & 0xff; 
		MODULE_CAN->MBX_CTRL.ACC.CODE[3] = (Code<<3) & 0xff;

		MODULE_CAN->MBX_CTRL.ACC.MASK[0] = Mask >> 21; 
		MODULE_CAN->MBX_CTRL.ACC.MASK[1] = (Mask>>13) & 0xff; 
		MODULE_CAN->MBX_CTRL.ACC.MASK[2] = (Mask>>5)  & 0xff; 
		MODULE_CAN->MBX_CTRL.ACC.MASK[3] = (Mask<<3) | 0x07;
		MODULE_CAN->MOD.B.AFM = 1;
	}
	else
	{
		PrintLnLog("CAN: Unsupported filter mode");
		return CAN_UNSUPPORTED;
	}

	return CAN_OK;
}

SCCanStatus SimpleCan_ESP32_DevC::ActivateNotification(uint16_t dataLength, RxCallback callback, void* userData)
{
	if (RxHandlerP != NULL)
	{
		return CAN_ERROR;
	}

	RxHandlerP = &Can1RxHandler;		// This is the static object inside SimpleCan_ESP32_DevC
	RxHandlerP->SetProfileCallback(dataLength, callback, userData);
	return CAN_OK;
}

bool SimpleCan_ESP32_DevC::SendNextMessageFromQueue()
{

	// Restart if bus-off state.
	if (MODULE_CAN->SR.B.BS==1)
		// Release Reset Mode if it was set.
		MODULE_CAN->MOD.B.RM = 0;
	
	if(!MODULE_CAN->SR.B.TBS)
		return true;

	CANTxMessage Msg;
	if (!TxQueue.Dequeue(&Msg))
		// Nothing to send...
		return true;

	// PrintLog("CAN (ESP32): Sending %d bytes with ID 0x%x as %s frame\n", Msg.Size, Msg.CanID, Msg.EFF?"EFF":"std");

	if (Msg.RTR)
	{
		// The queued message was an RTR
		SendRequestMessage(Msg.Size, Msg.CanID, Msg.EFF);
	}
	else
	{
		// PrintLnLog("#");
		uint8_t i;
		CAN_FIR_t Fir;

		// Serial.print("T");

		Fir.U = 0;
		Fir.B.RTR = CAN_no_RTR;
		Fir.B.DLC = Msg.Size;

		if(!Msg.EFF)
		{
			// Standard frame
			Fir.B.FF = CAN_frame_std;
		
			//Write message ID
			_CAN_SET_STD_ID(Msg.CanID);

			// Copy the frame data to the hardware
			for(i=0; i<Msg.Size; i++)
				MODULE_CAN->MBX_CTRL.FCTRL.TX_RX.STD.data[i] = Msg.Data[i];
		}
		else
		{
			// Extended frame
			Fir.B.FF = CAN_frame_ext;

			// Write message ID
			_CAN_SET_EXT_ID(Msg.CanID);

			// Copy the frame data to the hardware
			for(i=0; i<Msg.Size; i++)
				MODULE_CAN->MBX_CTRL.FCTRL.TX_RX.EXT.data[i]=Msg.Data[i];
		}

		// Transmit frame
		MODULE_CAN->MBX_CTRL.FCTRL.FIR.U = Fir.U;
		MODULE_CAN->CMR.B.TR=1;
		// MODULE_CAN->CMR.B.SRX=1;
	}

	return true;
}

void SimpleCan_ESP32_DevC::SendRequestMessage(int NumBytes, int CanID, bool UseEFF)
{
	// PrintLog("CAN (ESP32): Sending %d bytes with ID 0x%x\n", NumBytes, CanID);

	// Skip command if sender ID is disabled.
	if (SendIDFilterFunc && !SendIDFilterFunc(CanID)) return; 

	uint8_t i;
	CAN_FIR_t Fir;

	// Serial.print("T");

	Fir.U = 0;
	Fir.B.RTR = CAN_RTR;
	Fir.B.DLC = NumBytes;

	if(!UseEFF)
	{
		// Standard frame
		Fir.B.FF = CAN_frame_std;
	
		//Write message ID
		_CAN_SET_STD_ID(CanID);
	}
	else
	{
		// Extended frame
		Fir.B.FF = CAN_frame_ext;

		// Write message ID
		_CAN_SET_EXT_ID(CanID);
	}

    // Transmit frame
	MODULE_CAN->MBX_CTRL.FCTRL.FIR.U = Fir.U;
    MODULE_CAN->CMR.B.TR=1;
}
